# rmus

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  api.py  database.py  db.py  docker-compose.yml  go.mod  main.py  pyproject.toml  server.py  setup.cfg
scripts/: docker_clean.sh  docker_rebuild.sh  docker_up.sh
templates/: index.html
