[project]
name = "rmus"
version = "0.1.0"
description = "Self-hosted music server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "pillow>=12.2.0",
    "pyacoustid>=1.3.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
